Display the errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+      <div>
+       <p class="notice"><%= notice %></p>
+      </div>
+
+      <div>
+        <p class="alert"><%= alert %></p>
+      </div>
     <%= yield %>
   </body>
 </html>
