--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,3 +2,12 @@
   <h1 class="font-bold text-4xl">Pages#index</h1>
   <p>Find me in app/views/pages/index.html.erb</p>
 </div>
+
+   <div class="links hidden md:block text-white mr-6" data-nav-target="links">
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign In", new_user_session_path %>
+        <%= link_to "Sign up", new_user_registration_path %>
+      <% end %>
+    </div>
